--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,11 +1,11 @@
 {
-    "name": "blockchain-voting-system",
+    "name": "express-server",
     "version": "1.0.0",
     "main": "index.js",
     "scripts": {
         "build": "tsc",
         "start": "node dist/server.js",
-        "test": "ts-node-dev --respawn server.ts"
+        "dev": "ts-node-dev --respawn server.ts"
     },
     "author": "",
     "license": "ISC",
@@ -13,7 +13,7 @@
     "dependencies": {
         "body-parser": "^1.20.2",
         "cors": "^2.8.5",
-        "dotenv": "^16.4.5",
+        "dotenv": "^16.4.7",
         "express": "^4.19.2",
         "helmet": "^7.1.0",
         "mongoose": "^8.4.3",
