--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,45 @@
 /Frontend/node_modules
 /Frontend/.pnp
-/Frontend.pnp.*
-/Frontend.yarn/*
-/Frontend!.yarn/patches
-/Frontend!.yarn/plugins
-/Frontend!.yarn/releases
-/Frontend!.yarn/versions
+/Frontend/.pnp.*
+/Frontend/.yarn/*
+/Frontend/!.yarn/patches
+/Frontend/!.yarn/plugins
+/Frontend/!.yarn/releases
+/Frontend/!.yarn/versions
 /Frontend/coverage
 /Frontend/.next/
 /Frontend/out/
 /Frontend/build
-/Frontend.DS_Store
-/Frontend*.pem
-/Frontendnpm-debug.log*
-/Frontendyarn-debug.log*
-/Frontendyarn-error.log*
-/Frontend.pnpm-debug.log*
-/Frontend.env*
-/Frontend.vercel
-/Frontend*.tsbuildinfo
-/Frontendnext-env.d.ts
+/Frontend/.DS_Store
+/Frontend/*.pem
+/Frontend/npm-debug.log*
+/Frontend/yarn-debug.log*
+/Frontend/yarn-error.log*
+/Frontend/.pnpm-debug.log*
+/Frontend/.env*
+/Frontend/.vercel
+/Frontend/*.tsbuildinfo
+/Frontend/next-env.d.ts
+
+/Backend/node_modules
+/Backend/.pnp
+/Backend/.pnp.*
+/Backend/.yarn/*
+/Backend/!.yarn/patches
+/Backend/!.yarn/plugins
+/Backend/!.yarn/releases
+/Backend/!.yarn/versions
+/Backend/coverage
+/Backend/.next/
+/Backend/out/
+/Backend/build
+/Backend/.DS_Store
+/Backend/*.pem
+/Backend/npm-debug.log*
+/Backend/yarn-debug.log*
+/Backend/yarn-error.log*
+/Backend/.pnpm-debug.log*
+/Backend/.env*
+/Backend/.vercel
+/Backend/*.tsbuildinfo
+/Backend/next-env.d.ts
