Added New Truffle Configuration

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,26 @@
 /Backend/.vercel
 /Backend/*.tsbuildinfo
 /Backend/next-env.d.ts
+
+/Truffle/node_modules
+/Truffle/.pnp
+/Truffle/.pnp.*
+/Truffle/.yarn/*
+/Truffle/!.yarn/patches
+/Truffle/!.yarn/plugins
+/Truffle/!.yarn/releases
+/Truffle/!.yarn/versions
+/Truffle/coverage
+/Truffle/.next/
+/Truffle/out/
+/Truffle/build
+/Truffle/.DS_Store
+/Truffle/*.pem
+/Truffle/npm-debug.log*
+/Truffle/yarn-debug.log*
+/Truffle/yarn-error.log*
+/Truffle/.pnpm-debug.log*
+/Truffle/.env*
+/Truffle/.vercel
+/Truffle/*.tsbuildinfo
+/Truffle/next-env.d.ts
