--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,10 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "antd": "^5.23.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.2",
+    "@mui/material": "^6.4.2",
+    "@mui/x-data-grid": "^7.24.1",
+    "@types/react-router-dom": "^5.3.3",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.1.4",
     "remixicon": "^4.6.0",
     "sass": "^1.83.4"
   },
@@ -21,10 +27,11 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
