--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,17 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^6.4.2",
-    "@mui/material": "^6.4.2",
-    "@mui/x-data-grid": "^7.24.1",
-    "@types/react-router-dom": "^5.3.3",
-    "ethers": "^6.13.5",
+    "@next/font": "^14.2.15",
+    "antd": "^5.23.1",
+    "google-fonts": "^1.0.0",
     "next": "15.1.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.4",
     "remixicon": "^4.6.0",
     "sass": "^1.83.4"
   },
@@ -28,11 +23,10 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
-    "postcss": "^8.5.1",
-    "tailwindcss": "^3.4.17",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
