--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,36 +1,38 @@
 {
-    "name": "express-server",
-    "version": "1.0.0",
-    "main": "index.js",
-    "scripts": {
-        "build": "tsc",
-        "start": "node dist/server.js",
-        "dev": "ts-node-dev --respawn server.ts"
-    },
-    "author": "",
-    "license": "ISC",
-    "description": "",
-    "dependencies": {
-        "body-parser": "^1.20.3",
-        "cors": "^2.8.5",
-        "dotenv": "^16.4.7",
-        "express": "^4.21.2",
-        "express-session": "^1.18.1",
-        "helmet": "^7.1.0",
-        "mongoose": "^8.4.3",
-        "multer": "^1.4.5-lts.1",
-        "nodemailer": "^6.10.0",
-        "zod": "^3.23.8"
-    },
-    "devDependencies": {
-        "@types/body-parser": "^1.19.5",
-        "@types/cors": "^2.8.17",
-        "@types/dotenv": "^8.2.3",
-        "@types/express": "^4.17.21",
-        "@types/helmet": "^4.0.0",
-        "@types/node": "^22.12.0",
-        "@types/nodemailer": "^6.4.17",
-        "ts-node-dev": "^2.0.0",
-        "typescript": "^5.5.2"
-    }
+  "name": "express-server",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "build": "tsc",
+    "start": "node dist/server.js",
+    "dev": "ts-node-dev --respawn server.ts"
+  },
+  "author": "",
+  "license": "ISC",
+  "type": "module",
+  "description": "",
+  "dependencies": {
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
+    "express-session": "^1.18.1",
+    "helmet": "^7.1.0",
+    "mongoose": "^8.4.3",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.10.0",
+    "p-queue": "^8.1.0",
+    "zod": "^3.23.8"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.19.5",
+    "@types/cors": "^2.8.17",
+    "@types/dotenv": "^8.2.3",
+    "@types/express": "^4.17.21",
+    "@types/helmet": "^4.0.0",
+    "@types/node": "^22.12.0",
+    "@types/nodemailer": "^6.4.17",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.5.2"
+  }
 }
