--- a/Backend/tsconfig.json
+++ b/Backend/tsconfig.json
@@ -1,12 +1,14 @@
 {
-    "compilerOptions": {
-        "target": "es2016",
-        "module": "NodeNext",
-        "moduleResolution": "nodenext",
-        "outDir": "./dist",
-        "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
-        "strict": true,
-        "skipLibCheck": true
-    }
+  "compilerOptions": {
+    "target": "es2016",
+    "module": "NodeNext",
+    "moduleResolution": "nodenext",
+    "outDir": "./dist",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true,
+    "allowImportingTsExtensions": true,
+    "noEmit": true
+  }
 }
