--- a/Backend/package.json
+++ b/Backend/package.json
@@ -9,9 +9,9 @@
   },
   "author": "",
   "license": "ISC",
-  "type": "module",
   "description": "",
   "dependencies": {
+    "better-sqlite3": "^11.8.1",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
@@ -25,6 +25,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.12",
     "@types/body-parser": "^1.19.5",
     "@types/cors": "^2.8.17",
     "@types/dotenv": "^8.2.3",
