--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/nextjs-registry": "^1.0.2",
     "antd": "^5.23.1",
+    "antd-phone-input": "^0.3.13",
     "google-fonts": "^1.0.0",
     "next": "15.1.4",
     "react": "^19.0.0",
